@@ -1,2 +1,5 @@
+* Sat Mar 20 2021 Matiss Treinis <matiss@hub256.com> - 0.1.1
+- Add ability to read target roles from file
+
 * Sat Mar 20 2021 Matiss Treinis <matiss@hub256.com> - 0.1.0
 - Initial release
